Replace Twitter with Twitter/X

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
         </div>
       <% else %>
         <div class="mb-4 text-sm font-medium text-gray-900 dark:text-gray-300">
-          You signed up through Twitter and do not have a password set. Continue to sign in via Twitter.
+          You signed up through Twitter/X and do not have a password set. Continue to sign in via Twitter.
         </div>
       <% end %>
 
