Remove leaderboard link

--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -15,9 +15,13 @@
                         <li>
                             <a target="_blank" href="<%= current_or_guest_user.handle ? public_page_url(current_or_guest_user.handle) : '#' %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">My Public Page</a>
                         </li>
-                        <li>
+                        <%
+=begin%>
+ <li>
                             <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Leaderboards</a>
                         </li>
+<%
+=end%>
                         <li>
                             <a href="<%= edit_user_registration_path %>" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">My Profile & Settings</a>
                         </li>
