--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -14,14 +14,14 @@
     <!-- Header Photo -->
     <!-- this is poor refactor later -->
     <% if @user.banner_url.present? %>
-      <div style="width: 100%; padding-bottom: 33.33%; position: relative;">
-        <img class="w-full h-full object-cover shadow-lg absolute top-0 left-0" src="<%= @user.banner_url %>" alt="Twitter Header Photo">
+      <div style="width: 100%">
+        <img class="w-full h-full object-cover shadow-lg top-0 left-0" src="<%= @user.banner_url %>" alt="Twitter Header Photo">
       </div>
     <% else %>
       <%= vite_image_tag('images/default-public-page-banner.jpg', class: 'h-48 w-full object-cover shadow-lg', alt: 'Twitter Header Photo') %>
     <% end %>
     <!-- Profile Container -->
-    <div class="flex items-end justify-between px-4 py-4 -mt-20 z-10">
+    <div class="flex items-end justify-between px-4 py-4 -mt-20">
       <!-- Profile Photo and Info -->
       <div class="flex items-center space-x-4">
         <!-- Profile Photo -->
