Sticky top to check with Dean if he likes it

--- a/app/javascript/entrypoints/application.css
+++ b/app/javascript/entrypoints/application.css
@@ -40,11 +40,18 @@ body {
   }
 }
 
+.sticky-top {
+  position: -webkit-sticky; /* For Safari */
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Ensures the div stays above other content */
+}
+
 .logo-container a {
   display: flex;
   align-items: center;
   font-size: 170%; /* Increase text size by 20% */
-  padding-bottom: 25px;
+  padding-bottom: 20px;
 }
 
 .profile-container img {
