--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <%= alert %>
     </div>
   <% end %>
-  <div class="flex justify-between items-start">
+  <div class="flex justify-between items-start sticky-top bg-white dark:bg-gray-900">
     <div class="logo-container">
       <a href="<%= root_url %>" class="flex items-center text-2xl font-semibold dark:text-white">
         <%= image_tag("logo.png", height: '50', width: '50', alt: "Echosight") %>
