Redirect to sign up page when not authenticated

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,13 @@
     <!-- Card -->
     <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
         <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
-            Sign up
+            Join Waiting List
         </h2>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
+        <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">We are currently in private beta. Sign up to join the waiting list and we will notify you when we are ready to launch.</p>
+        <%
+=begin%>
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
           <div>
@@ -29,6 +33,8 @@
             <%= f.submit "Sign up", class: "w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" %>
           </div>
         <% end %>
+<%
+=end%>
 
           <%= render('shared/registrations/omniauth_login') %>
           <%= render "devise/shared/links" %>
