--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
             Join Waiting List
         </h2>
 
-        <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">We are currently in private beta. Sign up to join the waiting list and we will notify you when we are ready to launch.</p>
+        <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">We are currently in private beta. Join the waiting list and we will notify you when we are ready to launch.</p>
         <%
 =begin%>
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
