--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -9,7 +9,7 @@
   <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">Thanks for connecting your Twitter/X account. In order to show you your public page we need at least 3 days, ideally 7, of data from Twitter.</p>
 <% else %>
   <div class="py-3" role="alert">
-    <p class="mb-3 text-gray-500 dark:text-gray-400">To start collecting data from Twitter to generate your public page, please connect your Twitter/X account.</p>
+    <p class="mb-3 text-gray-500 dark:text-gray-400">To start collecting data from Twitter/X to generate your public page, please connect your Twitter/X account.</p>
     <p class="m-2">
       <%= button_to helpers.omniauth_authorize_path(:user, :twitter2), data: { turbo: false } do %>
         <button type="submit" class="text-white bg-[#1da1f2] hover:bg-[#1da1f2]/90 focus:ring-4 focus:outline-none focus:ring-[#1da1f2]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#1da1f2]/55 me-2 mb-2">
