--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -3,7 +3,7 @@
         <div class="flex justify-between items-center max-w-screen-2xl mx-auto">
             <div class="flex justify-start items-center">
                 <a href="<%= root_url %>" class="flex mr-14">
-                    <%= image_tag("logo.png", height: '32', width: '32', alt: "Echosight") %>
+                    <%= vite_image_tag("images/logo.png", height: '32', width: '32', alt: "Echosight") %>
                     <span class="self-center hidden sm:flex text-2xl font-semibold whitespace-nowrap dark:text-white">&nbsp;Echosight</span>
                 </a>
                 <!-- Desktop menu -->
