--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,5 +52,7 @@
     <% end %>
   </div>
     <%= yield %>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-cb7f3594-7426-4b38-9c68-78f4425abad9" data-elfsight-app-lazy></div>
   </body>
 </html>
