Disable download on followers graph

--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -43,7 +43,8 @@
               zoomin: true,
               zoomout: true,
               pan: true,
-              reset: true
+              reset: true,
+              download: false
             },
           },
         },
