--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
       <%= alert %>
     </div>
   <% end %>
-  <div class="flex justify-between items-start sticky-top bg-white dark:bg-gray-900">
-    <div class="logo-container">
+  <div class="flex justify-between bg-white dark:bg-gray-900 sticky pt-3 pb-3">
+    <div>
       <a href="<%= root_url %>" class="flex items-center text-2xl font-semibold dark:text-white">
         <%= vite_image_tag("images/logo.png", height: '50', width: '50', alt: "Echosight") %>
         <span class="align-middle">&nbsp;Echosight</span>
