Fix sticky header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <%= alert %>
     </div>
   <% end %>
-  <div class="flex justify-between bg-white dark:bg-gray-900 sticky pt-3 pb-3">
+  <div class="flex justify-between bg-white dark:bg-gray-900 sticky pt-3 pb-3 inset-x-0 top-0 left-0 z-10">
     <div>
       <a href="<%= root_url %>" class="flex items-center text-2xl font-semibold dark:text-white">
         <%= vite_image_tag("images/logo.png", height: '50', width: '50', alt: "Echosight") %>
