--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -28,10 +28,10 @@
                 <th scope="col" class="hidden md:table-cell p-1">
                     Quotes
                 </th>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="hidden  md:hidden lg:table-cell p-1">
                     Likes
                 </th>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="hidden md:hidden lg:table-cell p-1">
                     Replies
                 </th>
                 <th scope="col" class="md:table-cell p-1">
@@ -57,10 +57,10 @@
                   <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.quote_count %>
                   </td>
-                  <td class="hidden md:table-cell p-1">
+                  <td class="hidden md:hidden lg:table-cell p-1">
                       <%= tweet_metric.like_count %>
                   </td>
-                  <td class="hidden md:table-cell p-1">
+                  <td class="hidden md:hidden lg:table-cell p-1">
                       <%= tweet_metric.reply_count %>
                   </td>
                   <td class="md:table-cell p-1">
