--- a/app/components/primary_action_button_component.html.erb
+++ b/app/components/primary_action_button_component.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center">
+<div class="hidden md:flex flex-col justify-center">
   <a href="<%= @url %>">
     <button type="button" class="call-to-action-button call-to-action-button-indigo"><%= @link_text %></button>
   </a>
