--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen lg:mt-0 dark:bg-gray-900">
-    <!-- You can include the logo part here if it's required -->
+    <!-- Card -->
+    <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
     <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
         Change your password
     </h2>
@@ -9,15 +10,15 @@
 
         <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
             <div>
-                <%= f.label :password, "New password" %><br />
-                <% if @minimum_password_length %>
-                    <em class="text-sm text-gray-500 dark:text-white">(<%= @minimum_password_length %> characters minimum)</em>
-                <% end %>
+                <%= f.label :password, "New password" %>
                 <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-            </div>
+                <% if @minimum_password_length %>
+                <em class="text-sm text-gray-500 dark:text-white">(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %>
+          </div>
 
             <div>
-                <%= f.label :password_confirmation, "Confirm new password" %><br />
+                <%= f.label :password_confirmation, "Confirm new password" %>
                 <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
             </div>
 
@@ -30,4 +31,5 @@
     <% end %>
 
     <%= render "devise/shared/links" %>
+  </div>
 </div>
