--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -29,7 +29,7 @@
           <% if @user.image_url.present? %>
             <%= image_tag(@user.image_url, alt: @user.handle + " Profile image", class: "min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
           <% else %>
-            <%= vite_image_tag("images/logo.png", class: "min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
+            <%= vite_image_tag("images/twitter-default-avatar.png", class: "min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
           <% end %>
         <% end %>
       </div>
