--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -1,5 +1,5 @@
 <% cache(@cache_key) do %>
-  <% content_for :title, "#{page_user.handle}'s Public Page" %>
+  <% content_for :title, "#{page_user_handle}'s Public Page" %>
 
   <%= content_for :profile_container do %>
   <div class="profile-container">
@@ -24,20 +24,13 @@
     <div class="flex items-end justify-between px-4 py-4 -mt-20">
       <!-- Profile Photo and Info -->
       <div class="flex items-center space-x-4">
-        <!-- Profile Photo -->
-        <%= link_to "https://twitter.com/#{page_user.handle}", target: "_blank" do %>
-          <% if page_user.image_url.present? %>
-            <%= image_tag(page_user.image_url, alt: page_user.handle + " Profile image", class: "min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
-          <% else %>
-            <%= vite_image_tag("images/twitter-default-avatar.png", class: "min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
-          <% end %>
-        <% end %>
+        <%= render_twitter_image("min-h-24 min-w-24 h-24 w-24 md:h-28 md:w-28 rounded-full border-4 border-white shadow-lg object-cover") %>
       </div>
     </div>
 
     <div class="py-2 px-4 rounded-lg">
-      <h1 class="text-xl font-bold text-gray-900 dark:text-white"><%= page_user.name %></h1>
-      <div class="text-xs dark:text-white lg:mb-3">@<%= page_user.handle %></div>
+      <h1 class="text-xl font-bold text-gray-900 dark:text-white"><%= page_user_name %></h1>
+      <div class="text-xs dark:text-white lg:mb-3">@<%= page_user_handle %></div>
       <div class="text-m dark:text-white dark:text-white"><%= page_user_twitter_bio %></div>
     </div>
 
